Build failure in GCC 14.0 with -Werror=implicit-function-declaration
Hello,
Debian recently enabled -Werror=implicit-function-declaration
by default, resulting in the following error when building file-roller 44.beta:
../src/fr-window.c: In function ‘open_extracted_files_with_nonnative_appchooser’:
../src/fr-window.c:8421:9: error: implicit declaration of function ‘gdk_app_launch_context_set_screen’; did you mean ‘gdk_app_launch_context_set_icon’? [-Werror=implicit-function-declaration]
8421 | gdk_app_launch_context_set_screen (context, gtk_widget_get_screen (GTK_WIDGET (odata->window)));
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| gdk_app_launch_context_set_icon
../src/fr-window.c:8421:53: error: implicit declaration of function ‘gtk_widget_get_screen’; did you mean ‘gtk_widget_get_size’? [-Werror=implicit-function-declaration]
8421 | gdk_app_launch_context_set_screen (context, gtk_widget_get_screen (GTK_WIDGET (odata->window)));
| ^~~~~~~~~~~~~~~~~~~~~
| gtk_widget_get_size
Dropping that line remedies the build failure and the build succeeds. But then clicking on 'Show the Files' after extraction (if initiated by right-clicking the compressed file in nautilus and choosing 'Extract Here') does nothing. (This is a different issue, will open a new one accordingly.)
Edited by Amin Bandali