window: Drop leftover call to 'gdk_app_launch_context_set_screen'

This GdkScreen-related method was deprecated and removed in GTK 4,
so don't call it.  Otherwise, build fails like so:

../src/fr-window.c: In function ‘open_extracted_files_with_nonnative_appchooser’:
../src/fr-window.c:8421:9: error: implicit declaration of function ‘gdk_app_launch_context_set_screen’; did you mean ‘gdk_app_launch_context_set_icon’? [-Werror=implicit-function-declaration]
 8421 |         gdk_app_launch_context_set_screen (context, gtk_widget_get_screen (GTK_WIDGET (odata->window)));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |         gdk_app_launch_context_set_icon
../src/fr-window.c:8421:53: error: implicit declaration of function ‘gtk_widget_get_screen’; did you mean ‘gtk_widget_get_size’? [-Werror=implicit-function-declaration]
 8421 |         gdk_app_launch_context_set_screen (context, gtk_widget_get_screen (GTK_WIDGET (odata->window)));
      |                                                     ^~~~~~~~~~~~~~~~~~~~~
      |                                                     gtk_widget_get_size

Fixes https://gitlab.gnome.org/GNOME/file-roller/-/issues/227